--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ body {
     justify-content: space-between;
     margin-top: 10px;
 }
+#threads,#linkedin {
+  display: none;
+}
 
 .btn {
     cursor: pointer;
